playsms (0.8.2) unstable; urgency=high

  * created debian package for ubuntu installation
  * changed default gateway to kannel
  * removed sms limits, can now send multi-part smses
  * removed unnecessary keywords
  * various bug fixes

 -- Aaron Simmons <mithrandir@ic.org>  13 Dec 2007 10:00:00 +0800

playsms (0.8.1) unstable; urgency=high

  * Add all incoming sms without known keyword/code inserted to user 'admin' inbox
  * Add new feature multi-session login
  * Fix age calculation procedure, move it to $apps_path[incs]/admin/commoncustomcmd.php
  * Fix clickatell gateway module on callback.php (tested on two-way sms)
  * Fix when logged in as normal user cant see created autoreply scenario
  * Fix autoreply unable to reply requests
  * Change playsmsd from bash shell script to php script

 -- Anton Raharja <anton@ngoprek.org>  06 May, 2006 10:00:00 +0800

playsms (0.8) unstable; urgency=high

  * Add new function, public phonebook for sharing phonebooks number
  * Add new function, unicode message support for gateway module Clickatell
  * Add new function, flash message support for gateway module Clickatell
  * Add new function, message template for fast message compose
  * Add new feature, SMS autoreply
  * Add container file, where you can add custom command to run along with daemon.php
  $apps_path[incs]/admin/commoncustomcmd.php
  * Add protection to geturl.php in gateway module Kannel
  * Add geturl.php for gateway module Kannel, used for separating kannel box and playsms
  * Add urldecode to fix urlencoded form of message received by gateway module Kannel
  * Add function to send email using SMTP server, SMTP options in $apps_path/config.php
  * Add callback.php for gateway module clickatell, callback.php used to receive sms
  * Add prefix "playsms_" in every database tables (aimed for shared database)
  * Add Sender ID to replace SMS message footer (tblUser, tblSMSOutgoing altered)
  * Add delete link for SMSes in User Inbox